# AI-Customer-Support-Ticket-Triage-RL-Environment

./: Dockerfile  LICENSE  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  train.py
env/: ticket_env.py
graders/: grader.py
models/: model.txt
server/: app.py
tasks/: tasks.py
